--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Performance Liebherr v8</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3163/3163636.png">
+
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+<link rel="apple-touch-startup-image" href="https://w7.pngwing.com/pngs/351/422/png-transparent-black-and-white-climbing-illustration-rock-climbing-bouldering-climbing-sport-silhouette-climbing.png" media="(device-width: 393px) and (device-height: 852px) and (-webkit-device-pixel-ratio: 3)">
     <style>
         :root { --apple-blue: #0A84FF; --apple-bg: #000000; --apple-card: #1C1C1E; }
         body { background-color: var(--apple-bg); color: white; font-family: -apple-system, sans-serif; padding-bottom: 120px; }
