--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Performance Liebherr v8</title>
+    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3163/3163636.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root { --apple-blue: #0A84FF; --apple-bg: #000000; --apple-card: #1C1C1E; }
