--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Proj 7a">
-    <title>Proj 7a</title>
+    <title>Proj 7a+</title>
     
-    <link rel="apple-touch-icon" href="https://img.icons8.com/ios-filled/512/0A84FF/7-pt-star.png">
+    <link rel="apple-touch-icon" href="https://img.icons8.com/external-flat-icons-max-icons/512/external-7-number-flat-icons-max-icons.png">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
