--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Proj 7a">
-    <meta name="theme-color" content="#000000">
     <title>Proj 7a</title>
     
-    <link rel="apple-touch-icon" href="https://img.icons8.com/external-flat-icons-max-icons/512/external-7-number-flat-icons-max-icons.png">
+    <link rel="apple-touch-icon" href="https://img.icons8.com/fluency/512/7-number.png">
     
-    <link rel="apple-touch-startup-image" href="https://i.ibb.co/L6VshLd/splash-7a.png" media="(device-width: 393px) and (device-height: 852px) and (-webkit-device-pixel-ratio: 3)">
+    <link rel="apple-touch-startup-image" href="https://via.placeholder.com/1179x2556/000000/0A84FF?text=7a" media="(device-width: 393px) and (device-height: 852px) and (-webkit-device-pixel-ratio: 3)">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
